@@ -50,6 +50,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc6019.suite',
      'tests.test_rfc6031.suite',
      'tests.test_rfc6032.suite',
+     'tests.test_rfc6210.suite',
      'tests.test_rfc6211.suite',
      'tests.test_rfc7030.suite',
      'tests.test_rfc7191.suite',
